# copilot-studio-education

./: .gitignore  .nojekyll  README.md  about.html  course-overview.html  index.html  pyproject.toml  search.json  styles.css
.github/quarto-docs/: revealjs-notes.md  website-notes.md
afternoon/: brainstorming.html  build-server.html  deploy-and-connect.html  dev-environment.html  index.html  mcp-foundations.html
attendee-assets/agent-instructions/: file-grounding.md  first-agent.md
attendee-assets/channels/: publish-checklist.md
attendee-assets/knowledge-sources/: public-data-options.md
attendee-assets/prompts/: brainstorming-prompts.md
deployment/azure-container-apps/: README.md
deployment/docker/: Dockerfile  README.md
docs/: robots.txt  search.json  sitemap.xml  styles.css
docs/afternoon/: brainstorming.html  deploy-and-connect.html  dev-environment.html  index.html  mcp-foundations.html
docs/instructions/: index.html
docs/morning/: first-agent.html  index.html  mcp-overview.html  publishing-channels.html  sign-in-and-tour.html  web-knowledge.html
docs/resources/: index.html
docs/slides/: afternoon.html  morning.html
instructions/: index.html
mcp-servers/hello-world/: README.md  pyproject.toml
mcp-servers/hello-world/src/hello_world_server/: __init__.py  main.py
mcp-servers/http-template/: README.md  pyproject.toml
mcp-servers/http-template/src/http_template_server/: __init__.py  main.py
mcp-servers/public-api-demo/: README.md  pyproject.toml
mcp-servers/public-api-demo/src/public_api_demo/: __init__.py  main.py
morning/: file-grounding.html  first-agent.html  index.html  mcp-overview.html  publishing-channels.html  sign-in-and-tour.html  web-knowledge.html
references/: course-delivery-notes.md
site_libs/bootstrap/: bootstrap-649e648d789b643328d4b2ee72f6cfea.min.css  bootstrap-f7627c547dbc82fc4b91815a2d2cef6f.min.css
slides/: afternoon.html  morning.html
src/copilot_studio_education/: __init__.py  config.py
tests/: test_imports.py
website/: _quarto.yml  about.qmd  course-overview.qmd  index.qmd
(+23 files in other folders)
