[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "copilot-studio-education"
version = "0.1.0"
description = "Training materials and MCP starter projects for a Copilot Studio course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_studio_education"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
