[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hello-world-server"
version = "0.1.0"
description = "Minimal MCP server used in the afternoon training track"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.6.0",
]

[project.scripts]
hello-world-server = "hello_world_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world_server"]
