[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "http-template-server"
version = "0.1.0"
description = "HTTP-oriented MCP server template for future Copilot Studio demos"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.6.0",
]

[project.scripts]
http-template-server = "http_template_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/http_template_server"]
