[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "public-api-demo"
version = "0.1.0"
description = "Canonical public API MCP demo for the course"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "mcp>=1.6.0",
]

[project.scripts]
public-api-demo = "public_api_demo.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/public_api_demo"]
